# bw_1

./: .gitignore  CMakeLists.txt  README.md
SumatraPDF/: readme.txt
src/: base64.h  constants.h  klient.cpp  klient.h  konfiguracja.cpp  konfiguracja.h  mail.cpp  mail.h  paragon.cpp  paragon.h  powiadomienia.cpp  powiadomienia.h  produkt.cpp  produkt.h  tabela.cpp  tabela.h  utilities.cpp  utilities.h
